--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,7 +65,7 @@ flutter:
      - assets/dollar_icon.png
      - assets/paper_icon.png
      - assets/purple_check.png
-
+     - assets/right_arrow.png
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
